# Jellyfish-with-ComputerVision

./: LICENSE  README.md
Algorithm-Example/: README.md
Algorithm-Example/Cuda-OpenCV-Example/: bgrtogray.cu  diff_1.cu  diff_proper.cu  hello.cu  invert_1.cu  ptp.cu
Algorithm-Example/FLANN-matcher/: CMakeLists.txt  main.cpp
Algorithm-Example/Image-Alignm/: README.md
Algorithm-Example/Image-Pyramid/: main.cpp
Algorithm-Example/Marker_Detect/: CMakeLists.txt
Algorithm-Example/ORB-example/: main.cpp  stats.h  utils.h
Algorithm-Example/ORB-feature/: CMakeLists.txt  main.cpp
Algorithm-Example/Optical-Flow/: main.cpp
Algorithm-Example/test_stereo/: README.md
Algorithm-Example/test_stereo/additional_files/: q_matrix  right.txt
Algorithm-Example/test_stereo/include/: StereoCalib.hpp
Camera/D435/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  hello_D435
Camera/D435/src/: main.cpp
Camera/D435i/: CMakeLists.txt  README.md  main.cpp
Example/: README.md
Example/Cuda-OpenCV-Example/: CMakeLists.txt  bgrtogray.cu  conversions.cpp  diff_2.cu  invert_2.cu  split.cu
Example/Cuda-Optical-Flow/: CMakeLists.txt  main.cpp
Example/Dense-Optical-Flow/: CMakeLists.txt  main.cpp
Example/FLANN-matcher/: main.cpp
Example/Image-Alignm/: CMakeLists.txt  main.cpp
Example/Image-Pyramid/: CMakeLists.txt
Example/ORB-Cuda/: CMakeLists.txt  main_cpu.cpp  main_gpu.cpp
Example/ORB-example/: CMakeLists.txt  tracker.h
Example/Optical-Flow/: CMakeLists.txt  main.cpp
Example/Panorama/: CMakeLists.txt  main.cpp
Example/test_stereo/: CMakeLists.txt
Example/test_stereo/src/: StereoCalib.cpp
Marker_Detect/: README.md  main.cpp
Open3D/: README.md
Open3D/example/: main.py
PCL/examples/KdTree/: CMakeLists.txt  README.md  main.cpp
PCL/examples/ParametricModel/: CMakeLists.txt  main.cpp
PCL/examples/PassThroughFilter/: CMakeLists.txt
PCL/examples/StatisticalOutlierRemoval/: CMakeLists.txt
PCL/examples/T265-D435i-PCL-Example/: CMakeLists.txt  main.cpp
PCL/examples/Voxel-Grid/: main.cpp
PCL/examples/custom_pointT/: foo.cpp  foo.h
PLC/PLC-Walkthrough/: plc.md
PLC/examples/pcd_write/: pcd_write.cpp
SfM/MonocularSfM/config/: gerrard-hall.yaml
Theory/ComputerVision-Note/: README.md
Theory/ComputerVision-Note/Lesson-2/: 02-boxFilter.py  02-histogram.py  02-linearFilter.py
Theory/ComputerVision-with-Cpp/: README.md
Theory/ComputerVision-with-Cpp/Lesson-2/: 02-gauss.py  02-medianFilter.py
Theory/DIP/: README.md
Theory/DIP/1-Home/: README.md
Theory/DIP/10-Perspective-Transformation/: transformation.md
Theory/DIP/11-Concept-of-Bits-Per-Pixel/: bitsperpixel.md
Theory/DIP/12-Types-of-Images/: types.md
Theory/DIP/13-Color-Codes-Conversion/: colors.md
Theory/DIP/14-Grayscale-to-RGB-Conversion/: conversion.md
Theory/DIP/15-Concept-of-Sampling/: sampling.md
Theory/DIP/16-Pixel-Resolution/: resolution.md
Theory/DIP/17-Concept-of-Zooming/: zooming.md
Theory/DIP/18-Spatial-resolution/: spatial.md
Theory/DIP/19-Gray-Level-Resolution/: gray.md
Theory/DIP/2-DIP-Introduction/: DPI1.md
Theory/DIP/20-Concept-of-Quantization/: quantization.md
Theory/DIP/21-ISO-preference-curves/: ISO.md
Theory/DIP/22-Concept-of-Dithering/: dithering.md
Theory/DIP/23-Histograms-Introduction/: histogram.md
Theory/DIP/24-Brightness-and-Contrast/: brightness-contrast.md
Theory/DIP/25-Image-Transformations/: transformation.md
Theory/DIP/26-Histogram/: histogram.md
Theory/DIP/27-Introduction-to-Probability/: probability.md
Theory/DIP/28-Histogram-Equalization/: equalization.md
Theory/DIP/29-Gray-Level-Transformation/: gray-level-transformation.md
Theory/DIP/3-SaS-Introduction/: SaS.md
Theory/DIP/30-Concept-of-Convolution/: convolution.md
Theory/DIP/31-Concept-of-Mask/: mask.md
Theory/DIP/32-Concept-of-Blurring/: blurring.md
Theory/DIP/33-Concept-of-Edge-Detection/: edgedetection.md
Theory/DIP/34-Introduction-to-Frequency-domain/: frequency-domain.md
Theory/DIP/35-Convolution-Theorem/: convolution.md
Theory/DIP/36-Introduction-to-Color-Spaces/: color-spaces.md
Theory/DIP/37-Optical-Charactor-Recognition/: ORC.md
Theory/DIP/38-Computer-Vision-and-Computer-Graphics/: xxx.md
Theory/DIP/4-History-of-Photography/: history.md
Theory/DIP/5-Applications-and-Usage/: AaU.md
Theory/DIP/6-Concept-of-Dimensions/: dimensions.md
Theory/DIP/7-Image-Formation-on-Camera/: formation.md
Theory/DIP/8-Camera-Mechanism/: camera.md
Theory/DIP/9-Concept-of-Pixel/: pixel.md
Theory/Modern-ComputerVision-with-Pytorch/: README.md
Theory/Modern-ComputerVision-with-Pytorch/01-ANN/: ANN.ipynb  Back_propagation.ipynb  Chain_rule.ipynb  Feed_forward_propagation.ipynb  Gradient_descent.ipynb  Learning_rate.ipynb
Theory/Modern-ComputerVision-with-Pytorch/02-Pytorch/: Autograd.ipynb  Batch_normalization.ipynb  Building_a_neural_network_using_PyTorch_on_a_toy_dataset.ipynb  Fetching_values_of_intermediate_layers.ipynb  Impact_of_building_a_deeper_neural_network.ipynb  Impact_of_dropout.ipynb  Impact_of_regularization.ipynb  Implementing_custom_loss_function.ipynb  Initializing_a_tensor.ipynb  Inspecting_color_images.ipynb  Inspecting_grayscale_images.ipynb  Learning_rate_annealing.ipynb  Numpy_Vs_Torch_object_computation_speed_comparison.ipynb  Operations_on_tensors.ipynb  Preparing_data.ipynb  Scaling_the_dataset.ipynb  Sequential_method_to_build_a_neural_network.ipynb  Specifying_batch_size_while_training_a_model.ipynb  Steps_to_build_a_neural_network_on_FashionMNIST.ipynb  Varying_batch_size.ipynb  (+4 more)
Theory/MultipleViewGeometry/: README.md
Theory/Pattern-Recognition-and-Machine-Learning/: REAME.md
Tools/OpenCVPatch/: README.md
Tools/PCL/examples/NARF-Keypoint/: CMakeLists.txt  main.cpp
Tools/PCL/examples/PlanarSegmentaion/: CMakeLists.txt  main.cpp
Tools/PCL/examples/Voxel-Grid/: CMakeLists.txt  README.md
Tools/PyQt3D/: main.py  test3DGraphic.py
test_stereo/: CMakeCache.txt  Makefile  calibration  cmake_install.cmake
test_stereo/additional_files/: left.txt
test_stereo/src/: StereoVision.cpp  main.cpp
(+223 files in other folders)
